--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,6 +2,20 @@ input {
 	tcp {
 		port => 5000
 	}
+ rabbitmq {
+   host => "rabbitmq"
+   exchange => "logging.application.serilog"
+   queue => "logstash-serilog"
+   key => "#.#.#"
+   exclusive => false
+   durable => true
+   auto_delete => false
+   type => "serilog"
+   prefetch_count => 128
+   codec => "json"
+ }
+
+
 }
 
 ## Add your filters / logstash plugins configuration here
